--- a/hrr50-front-end-capstone-master/package.json
+++ b/hrr50-front-end-capstone-master/package.json
@@ -23,6 +23,7 @@
     "chai": "^4.2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-write-stream": "^2.0.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "mocha": "^8.2.1",
