--- a/hrr50-front-end-capstone-master/package.json
+++ b/hrr50-front-end-capstone-master/package.json
@@ -29,6 +29,7 @@
     "faker": "^5.1.0",
     "mocha": "^8.2.1",
     "mysql": "^2.18.1",
+    "newrelic": "^7.1.1",
     "nodemon": "^2.0.7",
     "nvm": "0.0.4",
     "pack": "^2.2.0",
